GitVersion1/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Customer_Status__c</fullName>
        <description>Value is stamped via Event Trigger</description>
        <label>Account Customer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account name is stamped via Event Trigger</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Value Stamped via Event Trigger</description>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to be populated from event and Account triggers for Weekly Sales Report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_End_date__c</fullName>
        <description>This formula is used to fetch end date of an event. It is used in custom report type</description>
        <formula>ActivityDate + ( DurationInMinutes /1440)</formula>
        <label>Activity End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Start_Date__c</fullName>
        <description>This formula is to fetch the start date of an event. It is used in custom report type</description>
        <formula>ActivityDate</formula>
        <label>Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Request_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Request No</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Events_for_Approval__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <filterItems>
                <field>Events_for_Approval__c.From__c</field>
                <operation>lessOrEqual</operation>
                <valueField>$Source.ActivityDate</valueField>
            </filterItems>
            <filterItems>
                <field>Events_for_Approval__c.To__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>$Source.ActivityDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Events_for_Approval__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>TEXT(Approval_Request_No__r.Status__c)</formula>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For approval process - state when approved by manager.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPN - France</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>CQN - Canada</fullName>
                </value>
                <value>
                    <fullName>CQN - US</fullName>
                </value>
                <value>
                    <fullName>Spain Mila</fullName>
                </value>
                <value>
                    <fullName>CPN - India</fullName>
                </value>
                <value>
                    <fullName>CPN - Poland</fullName>
                </value>
                <value>
                    <fullName>CFN - China</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Notes_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Notes Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim/Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Piglets</fullName>
                </value>
                <value>
                    <fullName>Breeding Herd</fullName>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>All Dairy</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>All Equine</fullName>
                </value>
                <value>
                    <fullName>Feedlot</fullName>
                </value>
                <value>
                    <fullName>Hogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>All Rabbit</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Turkeys</fullName>
                </value>
                <value>
                    <fullName>Chicken Layers</fullName>
                </value>
                <value>
                    <fullName>Other Ruminants</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Cow/calf</fullName>
                </value>
                <value>
                    <fullName>All Multispecies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_External_Id__c</fullName>
        <label>Contact External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Flag__c</fullName>
        <formula>IF( AND(ActivityDate &lt; Today(), IsTask = TRUE, TEXT(Status) &lt;&gt; &apos;Completed&apos;),IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;),

IF( AND(ActivityDate &lt; Today(), IsTask = TRUE, TEXT(Status) == &apos;Completed&apos;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;,&quot;Amber&quot;),

IMAGE(&quot;/img/samples/light_green.gif&quot;,&quot;Green&quot;)))</formula>
        <label>Due Date Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Update_Field1__c</fullName>
        <label>Dummy Update Field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Related_To_Accounts__c</fullName>
        <description>Default value is set to word &quot;Account&quot;</description>
        <label>Event Related To Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalRecurrenceActivityId__c</fullName>
        <description>This field is created to hold the Parent Activity Id in case of recurrence Task/Event</description>
        <externalId>true</externalId>
        <label>ExternalRecurrenceActivityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle - Beef</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Meat Poultry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Piglets</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Cattle - Dairy</fullName>
                </value>
                <value>
                    <fullName>Sow &amp; Hogs</fullName>
                </value>
                <value>
                    <fullName>Multispecies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to create approval workflow for events.</description>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_First__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Labyrinth Mobile Sync</description>
        <label>Mobile First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>CreatedBy.Role_Name__c</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_Role_Name__c</fullName>
        <formula>CreatedBy.Manager.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Function__c</fullName>
        <label>Product Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Breeder</fullName>
                </value>
                <value>
                    <fullName>Creep</fullName>
                </value>
                <value>
                    <fullName>Dry Cow</fullName>
                </value>
                <value>
                    <fullName>Finisher</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Lactating Meat</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pre-Starter</fullName>
                </value>
                <value>
                    <fullName>Pullet</fullName>
                </value>
                <value>
                    <fullName>Sow</fullName>
                </value>
                <value>
                    <fullName>Sow Gestation</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Boar</fullName>
                </value>
                <value>
                    <fullName>Milk Replacer</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Grower/Finisher</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>Other Piglet</fullName>
                </value>
                <value>
                    <fullName>Cow Calf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Other Poultry</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_to_Schedule_Follow_Up__c</fullName>
        <label>Reminder to Schedule Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <label>Report LInk</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saleslogic_Id__c</fullName>
        <label>Saleslogic Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment (Step 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aiden</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
                <value>
                    <fullName>Mila</fullName>
                </value>
                <value>
                    <fullName>Noah</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
                <value>
                    <fullName>Walton</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Consumer Interaction</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Sales Team Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Event Preparation</fullName>
                </value>
                <value>
                    <fullName>Prospect visit</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Taken_Hours__c</fullName>
        <label>Time Taken (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Event Preparation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sales Team Meeting</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade show</fullName>
                </value>
                <value>
                    <fullName>Consumer Interaction</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to link to the Activity report from Events.</description>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_no__c</fullName>
        <formula>MOD(FLOOR( ( ActivityDate - DATE(2016,01,01))/7),52)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Month__c</fullName>
        <formula>TEXT(YEAR(ActivityDate))&amp;&quot;.&quot;&amp;LPAD(text(MONTH(ActivityDate)), 2, &apos;0&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Month</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Future_Meetings</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>EVENT.START_DATE_TIME</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All Future Meetings</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Future_Meetings_vietnam</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>EVENT.START_DATE_TIME</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Tất cả cuộc họp trong tương lai</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Meetings</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>Reminder_to_Schedule_Follow_Up__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>rinte</value>
        </filters>
        <label>All Meetings</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Meetings_vietnam</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>Reminder_to_Schedule_Follow_Up__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>rinte</value>
        </filters>
        <label>Tất cả các cuộc họp</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Completed_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Tasks_vietnam</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Completed_Date__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>tất cả các nhiệm vụ</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Meetings</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Approval_Request_No__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Meetings</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Meetings_vietnam</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Sub_Type__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Approval_Request_No__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Các cuộc họp của tôi</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Vietnam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>